Build EGA bot classes, fetch and clean CLI interfaces and tabulator data processing class.

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,12 @@
 *__pycache__*
 
 # Ignore data
-!data/*/*/.gitkeep
+data/*/*/*
+data/*/*.csv
+!data/*/raw/.gitkeep
+
+# Ignore env vars
+.env
+
+# Ignore presentation
+presentation/
